assets/css/carousel.css
.carousel {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 100px 0;
  text-align: center;
}

#carousel {
  display: none;
}

.carousel__grid {
  display: grid;
  justify-content: center;
  align-items: center;
  grid-template-columns: 1fr 440px 1fr;
  grid-template-areas:
    "left-btn card right-btn"
    ". flip .";
  gap: 20px;
  width: 100%;
  max-width: 640px;
}

.carousel__title {
  width: auto;
  max-width: 440px;
  text-align: center;
  font-weight: 500;
  font-size: 14px;
  color: #1a1a1a80;
  margin-bottom: 32px;
}

.carousel__card {
  grid-area: card;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 20px;
  column-gap: 24px;
  background-color: #64d583;
  color: #1a1a1a;
  height: 300px;
  width: clamp(320px, 85vw, 440px);
  min-width: 320px;
  max-width: 440px;
  font-weight: 700;
  font-size: 32px;
  border-radius: 20px;
  padding: 24px;
  box-sizing: border-box;
  box-shadow:
    0px 2px 8px 0px #0000001a,
    -1px 2px 2px 0px #ffffffb2 inset,
    1px -1px 2px 0px #00000040 inset;
}

.carousel__card-text {
  margin: 0;
  text-align: center;
  overflow-wrap: break-word;
  word-break: break-word;
}

.carousel__card_color_green {
  background-color: #64d583;
}

.carousel__card_color_blue {
  background-color: #91a8f9;
}

.carousel__card_color_pink {
  background-color: #ee92d7;
}

.carousel__card_color_purple {
  background-color: #aa8ef0;
}

.carousel__card_color_orange {
  background-color: #ee955e;
}

.carousel__card_color_yellow {
  background-color: #f5d770;
}

.carousel__card_color_white {
  background-color: #ffffff;
  color: #1a1a1a;
}

.carousel__btn {
  background-color: #fff;
  width: 44px;
  height: 44px;
  border-radius: 8px;
  background-repeat: no-repeat;
  background-position: center;
  box-shadow:
    0px 2px 8px 0px #0000001a,
    -1px 2px 2px 0px #ffffffb2 inset,
    1px -1px 2px 0px #00000040 inset;
}

.carousel__btn_type_left {
  content: "";
  grid-area: left-btn;
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  opacity: 50%;
  background-image: url(../images/left.svg);
}

.carousel__btn_type_right {
  content: "";
  display: block;
  grid-area: right-btn;
  background-repeat: no-repeat;
  background-position: center;
  opacity: 50%;
  background-image: url(../images/right.svg);
}

.carousel__btn_type_flip {
  content: "";
  grid-area: flip;
  justify-self: center;
  display: block;
  background-repeat: no-repeat;
  background-position: center;
  opacity: 50%;
  background-image: url(../images/flip.svg);
}

.carousel__btn:hover {
  opacity: 100%;
  cursor: pointer;
}

.carousel__btn_type_right::before {
  opacity: 20%;
}

.carousel__btn_disabled {
  opacity: 20%;
}

.carousel__btn_disabled:hover {
  opacity: 20%;
  cursor: default;
}

@media screen and (max-width: 640px) {
  .carousel {
    padding: 60px 0;
  }

  .carousel__grid {
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-areas:
      "card card card"
      "left-btn . right-btn"
      ". flip .";
    max-width: 440px;
    width: 100%;
  }

  .carousel__card {
    width: 100%;
    min-width: 400px;
    max-width: 440px;
    min-height: 260px;
    height: 260px;
  }

  .carousel__btn_type_left,
  .carousel__btn_type_right,
  .carousel__btn_type_flip {
    justify-self: center;
  }

  .carousel__btn_type_flip {
    margin-top: 0;
  }
}

